--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
     background-color: rgba(14, 63, 14, 0.829);
     padding: 8px;
     font-family: 'Digital-7';
+    overflow: hidden;
 }
 .buttons {
     display: flex;
